# Okami

./: LICENSE.md  etf.ipynb  main.py  pyproject.toml  test.ipynb
cookbook/: setting_ambient.ipynb
okami/: demo.py  main.py
okami/src/domain/entities/: room.py  sensor.py  source.py  variogram.py
okami/src/services/operation/: operation.py
okami/src/services/plotting/: plots.py  plotting.py
okami/src/utils/: functions.py
src/domain/entities/: room.py  sensor.py  source.py
src/utils/: functions.py
