[tool.poetry]
name = "Okami"
version = "0.1.0"
description = ""
authors = ["João Pedro Jacques Hoss <joaopedro_jh@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
