[tool.poetry]
name = "Okami"
version = "0.1.0"
description = ""
authors = ["João Pedro Jacques Hoss <joaopedro_jh@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.2"
pandas = "^1.3.3"
pydantic = "^1.8.2"
plotly = "^5.3.1"
pytest = "^6.2.5"
ipykernel = "^6.5.0"
nbformat = "^5.1.3"
Shapely = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
