[tool.poetry]
name = "Okami"
version = "0.1.0"
description = ""
authors = ["João Pedro Jacques Hoss <joaopedro_jh@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.2"
pandas = "^1.3.3"
plotly = "^5.3.1"
Shapely = "^1.8.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pyportfolioopt = "^1.5.1"
yfinance = "^0.1.69"
moviepy = "^1.0.3"
ffmpeg-python = "^0.2.0"
ipykernel = "^6.7.0"
nbformat = "^5.1.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
